--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+axum = "0.6.18"
+hyper = { version = "0.14.27", features = ["full"] }
+tokio = { version = "1.29.1", features = ["full"] }
+tower = { version = "0.4.13", features = ["full"] }
