--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ dotenvy = "0.15.7"
 hyper = { version = "0.14.27", features = ["full"] }
 tokio = { version = "1.29.1", features = ["full"] }
 tower = { version = "0.4.13", features = ["full"] }
+
+[worspace]
+members=["orm"]
