--- a/orm/Cargo.toml
+++ b/orm/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+sea-orm = { version = "0.11.3", features = ["macros", "sqlx-mysql", "runtime-tokio-rustls"] }
+sea-orm-migration = "0.11.3"
+tokio = { version = "1.29.1", features = ["full"] }
+
