--- a/orm/Cargo.toml
+++ b/orm/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 sea-orm = { version = "0.11.3", features = ["macros", "sqlx-mysql", "runtime-tokio-rustls"] }
 sea-orm-migration = "0.11.3"
+serde = "1.0.167"
 tokio = { version = "1.29.1", features = ["full"] }
 
