implement proper json response

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ hyper = { version = "0.14.27", features = ["full"] }
 tokio = { version = "1.29.1", features = ["full"] }
 tower = { version = "0.4.13", features = ["full"] }
 orm = { path = "./orm" }
+serde = "1.0.169"
 
 [workspace]
 members = ["orm"]
